<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/BACKGROUND_IMAGEVIEW"
        android:layout_width="0dp"
        android:layout_height="684dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/STORY_TEXTVIEW"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <TextView
        android:id="@+id/STORY_TEXTVIEW"
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/story2"
        android:textColor="#000000"

        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="35sp"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/TOP_BUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <ImageButton
        android:id="@+id/INFO_BUTTON"
        style="@android:style/Widget.ImageButton"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/TOP_BUTTON"
        android:layout_width="0dp"
        android:layout_height="53dp"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="72dp"

        android:background="@drawable/round_button_red"
        android:text="@string/ans2goto6"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BOTTOM_BUTTON"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/round_button_blue"
        android:text="@string/ans2goto5"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/SWITCH_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/image_view"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>